[song-api] fix server port

--- a/0x02/construindo_API_REST/pom.xml
+++ b/0x02/construindo_API_REST/pom.xml
@@ -15,6 +15,7 @@
     <description>Song project Spring Boot</description>
     <properties>
         <java.version>11</java.version>
+        <start-class>com.song.demo.SongApiApplication.main</start-class>
     </properties>
     <dependencies>
         <dependency>
