--- a/0x02/construindo_API_REST/application.properties
+++ b/0x02/construindo_API_REST/application.properties
@@ -1,4 +1,2 @@
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=localhost:8081/api-song
+server.port=8081
+server.servlet.context-path=/api-song
